<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewOrderHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:background="@drawable/frame"
                android:fontFamily="sans-serif-black"
                android:text="@string/assignorder"
                android:textAlignment="center"
                android:textColor="@color/mainorange"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/etTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="1dp"
                android:background="@drawable/frame"
                android:drawableRight="@drawable/ic_round_table"
                android:ems="10"
                android:hint="@string/table"
                android:inputType="numberDecimal"
                android:numeric="integer"
                android:textAlignment="viewStart" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/frame">

                <TextView
                    android:id="@+id/textDebuger"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/mgroup1"
                    android:textAlignment="center"
                    android:textColor="@color/mainorange"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewMainDishes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textDebuger" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/frame">

                <TextView
                    android:id="@+id/textDebuger2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/mgroup2"
                    android:textAlignment="center"
                    android:textColor="@color/mainorange"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewDeserts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textDebuger2" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/frame">

                <TextView
                    android:id="@+id/textDebuger3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/mgroup3"
                    android:textAlignment="center"
                    android:textColor="@color/mainorange"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewSnacks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textDebuger3" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/frame">

                <TextView
                    android:id="@+id/textDebuger4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/mgroup4"
                    android:textAlignment="center"
                    android:textColor="@color/mainorange"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewDrinks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textDebuger4" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cstOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/frame">

                <TextView
                    android:id="@+id/textDebuger5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/currentorder"
                    android:textAlignment="center"
                    android:textColor="@color/redorange"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewCheckOrder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textDebuger5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/etComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/frame"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/commentorder"
                android:inputType="textMultiLine|textCapSentences" />

            <Button
                android:id="@+id/buttonFinalizeOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/frame"
                android:text="@string/assignorderp"
                app:iconPadding="0dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>